fix(payment_method): pricing vertical alignment

--- a/public/scss/pages/PaymentMethod.module.scss
+++ b/public/scss/pages/PaymentMethod.module.scss
@@ -238,6 +238,12 @@
     @include fixedWidth(100%);
     padding: 4px 0;
 
+    &:first-child,
+    &:first-of-type
+    {
+      align-items: flex-start;
+    }
+
     &:last-child
     {
       @include typographyBuilder(secondary, 500, 14, 24);
